Fix mobile icons spacing

--- a/src/components/lets-connect/lets-connect.module.scss
+++ b/src/components/lets-connect/lets-connect.module.scss
@@ -18,7 +18,7 @@
     text-align: center;
 
     @media (max-width: 480px) {
-      width: 1.38em;
+      width: 1.1em;
     }
   }
 }
